style.css
body {
    font-family: Verdana, Geneva, Tahoma, sans-serif;

    margin: 0;
}
button {
    color: #E8EAE6;
    background-color: #91BE6F;
    border-radius: 8px;
    padding: 5px 20px;
    font-weight: 600;
    flex-shrink: 0;
}

/* header section */
.header {
    background-color: #2c3026;
    color: #F6F4F6;
    width: 100%;
}
.header-container {
    display: flex;
    justify-content: space-between;
    margin: auto;
    max-width: 80%;
    flex-wrap: wrap;
}

ul {
    padding: 0px;
    display: flex;
    gap: 20px;
}
li {
    list-style: none;
}
.header-p {
    font-weight: 900;
    font-size: 24px;
}
.header-ul {
    color: #E8EAE6;
    font-size: 18px;
    font-weight: 100;
}
.header-image {
    margin: auto;
    background-color: #91BE6F;
    width: 200px;
    height: 150px;
    border: 3px solid black;
    flex-shrink: 0;
}

/* top section */
.top {
    display: flex;
    justify-content: center;
    background-color: #2c3026;
    color: #F6F4F6;
    width: 100%;
}
.top-container {
    display: flex;
    justify-content: space-between;
    margin: auto;
    max-width: 80%;
    padding: 20px
}
.hero {
font-size: 48px;
font-weight: 900;
color: #E8EAE6;
margin: 0;
}
.sub {
color: #E8EAE6;
font-size: 18px;
font-weight: 100;
margin: 10px 0px;
}
/* middle section */
.middle {
    display: flex;
    justify-content: center;
    background-color: #F6F4F6;
    color: #2c3026;
    width: 100%;
}
.middle-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    margin: auto;
    max-width: 80%;
}
.random {
    font-size: 24px;
    font-weight: 700;
}
.middle
p{
    text-align: center;
}
.image-reel {
    display: flex;
    justify-content: center;
    gap: 20px;  
}
.image {
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    width: 100px;
}
.img {

    border: 3px solid #91BE6F;
    border-radius: 10px;
    height: 100px;
    width: 100px;
}

.img-text {
    font-size: 11px;
    text-align: center;
    flex-wrap: wrap;
}

/* quote section */
.quote {
    color: #2c3026;
    background-color: #E8EAE6;
    width: 100%;
    height: auto;
    display: flex;
    justify-content: center;
    padding: 40px;
}
.quote-container {
    font-size: 36px; 
    font-style: italic;
    font-weight: 100;
    max-width: 80%;
    padding: 0px;
    display: flex;
    flex-direction: column;
    justify-content: center;
}
.thor {
    font-size: 18px;
    font-style: normal;
    font-weight: 900;
    text-align: end;
}

/* footer section */
.footer {
    color: #E8EAE6;
    background-color: #91BE6F;
    border-radius: 5px;
    margin: 50px;
    padding: 40px 100px;
    
    display: flex;
    align-items: center;
    gap: 100px;
}
.cta {
 
    display: flex;
    flex-direction: column;    
}
.cta p {
    margin: 0px;
    padding: 0px;
}
.cta-p {
font-size: 20px;
font-weight: 900;
}
.cta-sign {
font-size: 12px;
}
.cta-button {
    outline: 2px solid #E8EAE6
}

